[metadata]
description = A collection of self-contained fsspec-based filesystems
name = morefs
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/morefs
platforms=any
authors = Saugat Pachhai
maintainer_email = saugat@iterative.ai
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    fsspec

[options.extras_require]
memfs =
    pygtrie>=2.3.2
asynclocalfs =
    typing_extensions>=3.10.0; python_version < '3.10'
    aiofile==3.8.1
all =
    %(memfs)s
    %(asynclocalfs)s
tests =
    pytest==7.1.2
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pytest-asyncio==0.19.0
    pylint==2.15.0
    mypy==0.971
    %(all)s
dev =
    %(tests)s
    %(all)s
    types-aiofiles

[options.entry_points]
fsspec.specs =
    memfs = morefs.memory:MemFS
    dictfs = morefs.dict:DictFS
    overlayfs = morefs.overlay:OverlayFileSystem
    asynclocalfs = morefs.asyn_local:AsyncLocalFileSystem

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
